<resources>
    <string name="app_name">AbuYoYo</string>
    <string name="load_me_up">Load me up!</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="full_name_hint">Full Name</string>
    <string name="destination_hint">Destination</string>
    <string name="abuyoyo_logo_Description">AbuYoYo logo</string>
    <string name="trip_destination_hint">Destination</string>
    <string name="main_message">main message</string>
    <string name="origin_hint">Current Location</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullname">Full name</string>
    <string name="action_sign_up">Sign up</string>

    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone_number">Phone Number</string>
    <string name="not_have_account">Don\'t have an account? Sign Up!</string>
    <string name="please_log_in">Please Log In</string>
    <string name="instructions">Please select starting point and destination</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="from">from</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_phone">Driver Phone</string>
    <string name="to">to</string>
</resources>
